[project]
name = "tether-cli"
version = "0.1.0"
description = "Mobile emulator automation CLI for AI agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
tether = "tether.cli:main"

[project.urls]
Homepage = "https://github.com/flimble/tether"
Repository = "https://github.com/flimble/tether"
Issues = "https://github.com/flimble/tether/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tether"]
